# crypto-options-research-platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml  requirements-full.txt  requirements-prod.txt  requirements.txt  run_backtest_cli.py  run_backtest_full_history.py  run_backtest_with_output.py  run_demo.py  run_large_scale_backtest.py  run_memory_efficient_backtest.py  start_notebook.sh  verify_all.sh  verify_implementation.py
.github/workflows/: cd.yml  ci.yml  complexity-governance.yml  daily-regression.yml  docs-link-check.yml  research-audit-baseline-refresh.yml  research-audit.yml  weekly-operating-audit.yml
config/: __init__.py  complexity_baseline.json  complexity_budget.json  consistency_thresholds.json  online_offline_consistency_thresholds.json  settings.py  weekly_operating_thresholds.json
core/: exceptions.py  health_server.py  types.py
core/exchange/: base.py
core/validation/: __init__.py  schemas.py  validators.py
data/: __init__.py  cache.py  cache_policy.py  duckdb_cache.py  integrated_manager.py  orderbook_reconstructor.py  quote_integration.py  redis_cache.py  streaming.py  validation.py
data/downloaders/: deribit.py  okx.py
data/generators/: hawkes.py  hawkes_estimation.py  hawkes_visualization.py  synthetic.py
deployment/: DEPLOYMENT.md  Dockerfile.prod  docker-compose.prod.yml
deployment/config/: .env.prod.template  prometheus.yml
deployment/k8s/: ingress.yaml  kustomization.yaml  market-data-collector.yaml  mm-secrets.template.yaml  namespace.yaml  risk-monitor.yaml  trading-engine.yaml
deployment/scripts/: deploy.sh
docs/: GUIDE.md  api.md  architecture.md  branch-protection-checklist.md  cache_strategy.md  complexity-governance.md  dashboard.md  deployment.md  examples-summary.md  examples.md  governance-operations.md  hawkes_comparison_experiment.md  project-map-mermaid.md  quickstart.md  research-audit.md  review-workflow-test.md  theory.md  workspace-slimming.md  算法与模型入门学习版.md  算法与模型深度讲解.md
execution/: __init__.py  market_data_collector.py  research_dashboard.py  risk_monitor.py  service_runner.py  trading_engine.py
memory/: project-context.md
strategies/: base.py
tasks/: todo.md
tests/: __init__.py  conftest.py  test_adaptive_hedging.py  test_algorithm_performance_baseline.py  test_almgren_chriss.py  test_arbitrage.py  test_architecture_boundaries.py  test_arena_python39_import.py  test_backtest.py  test_backtest_output_attribution.py  test_branch_name_guard.py  test_cache.py  test_cache_policy.py  test_circuit_breaker.py  test_code_review_fixes.py  test_complexity_guard.py  test_core_exceptions.py  test_core_types.py  test_core_validators_additional.py  test_daily_regression_gate.py  test_dashboard_backtest.py  test_dashboard_risk.py  test_dashboard_strategy.py  test_data_downloaders.py  test_data_validation.py  test_data_validation_utils.py  test_deribit_client_unit.py  test_deribit_downloader_cache.py  test_dockerfile.py  test_duckdb_cache.py  test_execution_entrypoints.py  test_fast_integrated_strategy.py  test_governance_report_utils.py  test_governance_status_action_utils.py  test_hawkes_comparison.py  test_health_server.py  test_integrated_manager.py  test_integrated_strategy.py  test_inverse_power_options.py  test_inverse_power_validation.py  (+66 more)
utils/: __init__.py  logging_config.py
validation_scripts/: deep_math_verification.py  gamma_derivation_analysis.py  gamma_sign_analysis.py  greeks_conversion_analysis.py  inverse_pnl_math_validation.py  inverse_power_validation.py  io_utils.py  iv_convergence_analysis.py  iv_surface_stability_report.py  jump_premia_stability_report.py  long_term_algorithms_benchmark.py  pricing_model_zoo_benchmark.py  put_call_parity_verification.py  research_audit_compare.py  research_audit_snapshot.py  research_audit_weekly_summary.py  rough_jump_experiment.py  second_round_math_audit_report.md
(+163 files in other folders)
